# fwark

./: .gitignore  CMakeLists.txt
source/: all.sln  todo.txt
source/core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters  debug.h  thread.cpp  thread.h  types.h  vec3.cpp  vec3.h
source/core/include/core/: types.h  vec3.h
source/demo/: Application.cpp  Application.h  CMakeLists.txt  demo.sln  demo.vcxproj  demo.vcxproj.filters  present_queue.h  win32_entrypoint.cpp  win_graphics.h
source/demo/core/: scope.h
source/demo/graphics/: device.cpp  device.h
source/glad/: CMakeLists.txt  glad.vcxproj  glad.vcxproj.filters
source/glad/include/glad/: glad.h
source/glad/src/: glad.c
source/graphics/: device.h
source/include/core/: timer.h
source/include/win32_game/: graphics_device.h  win32_game.h
source/stb/: CMakeLists.txt  stb.cpp
source/win32_game/: Application.cpp  Application.h  CMakeLists.txt  debug_stats.cpp  debug_stats.h  graphics_device.cpp  input_state.h  present_queue.h  update_frame.cpp  update_frame.h  win32_game.cpp  win32_game.vcxproj  win32_game.vcxproj.filters
source/win32_game/render/: commands.h  resources.cpp  resources.h
source/win32_game/systems/: loader.cpp
